--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -13,12 +13,12 @@ alerting:
           - alertmanager:9093
 
 scrape_configs:
-  # WeatherApp metrics endpoint
+  # WeatherApp metrics endpoint (Spring Actuator)
   - job_name: 'weather-app'
     static_configs:
       - targets: ['localhost:8080']
     scrape_interval: 15s
-    metrics_path: '/metrics'
+    metrics_path: '/actuator/prometheus'
     scrape_timeout: 10s
 
   # Prometheus self-monitoring
